--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <ul>
                     <li><i class="icon-telephone114"></i> Tel: (55) 5206 2240</li>
                     <li><i class="icon-icons74"></i>Viveros de Coyoacán 64</li>
-                    <li><i class="icon-icons20"></i> Lun a Sab 08:00 - 16:30</li>
+                    <li><i class="icon-icons20"></i> Lun a Sab 09:00 - 16:00</li>
                 </ul>
             </div>
             <!-- / TOP BAR -->
@@ -294,7 +294,7 @@
                 <div class="footer-left">
                     <div class="footer-address-widget clearfix">
                         <ul>
-                            <li><i class="icon-telephone114"></i>(55)5206 2240<a href="mailto:soporte@starkend.com">soporte@starkend.com</a></li>
+                            <li><i class="icon-telephone114"></i>(55)5206 2240<a href="mailto:info@starkend.com">info@starkend.com</a></li>
                             <li><i class="icon-icons74"></i>Viveros de Coyoacán 64<span>Tlalnepantla, Edo. de Méx, C.P. 54080</span></li>
                         </ul>
                     </div>
@@ -308,7 +308,7 @@
                         <ul class="social">
                             <li class="animate bounceIn"><a href="https://www.facebook.com/StarkendMx/" class="facebook"><i class="icon-facebook-1"></i></a></li>
                             <li class="animate bounceIn" data-delay="100"><a href="#." class="twitter"><i class="icon-twitter-1"></i></a></li>
-                            <li class="animate bounceIn" data-delay="200"><a href="hector.pichardo@ideasg.com" class="google-plus"><i class="icon-google"></i></a></li>
+                            <li class="animate bounceIn" data-delay="200"><a href="#." class="google-plus"><i class="icon-google"></i></a></li>
                             <!-- <li class="animate bounceIn" data-delay="300"><a href="#." class="linkedin"><i class="icon-linkedin3"></i></a></li> -->
                         </ul>
                     </div>
