--- a/contact-us.html
+++ b/contact-us.html
@@ -110,20 +110,22 @@
                         <li><a href="about-us.html">Nosotros</a></li>
                         <li class="dropdown"><a href="#.">Marcas <i class="fa fa-caret-down"></i></a>
                             <ul class="dropdown-menu">
-
-                                <li class="dropdown-submenu"><a href="https://ovvotech.com">OVVO <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="productos.html">OVVO <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="https://ovvotech.com/product/#Drilling">Productos</a></li>
-                                        <!-- <li><a href="https://ovvotech.com/videos/">Videos</a></li>
-                                        <li><a href="https://ovvotech.com/awards/">Premiaciones</a></li> -->
+                                        <li><a href="productos.html#prod_uno">Perforación</a></li>
+                                        <li><a href="productos.html#prod_dos">Anidado</a></li>
+                                        <li><a href="productos.html#prod_tres">Fresado</a></li>
+                                        <li><a href="productos.html#prod_cinco">Rango original</a></li>
+                                        <li><a href="productos.html#prod_seis">Cortadores</a></li>
+                                        <li><a href="productos.html#prod_siete">Maquinaria</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown-submenu"><a href="https://lockdowel.com/">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
                                         <!-- <li><a href="services.html">Productos</a></li> -->
-                                        <li><a href="https://lockdowel.com/">Productos</a></li>
+                                        <li><a href="#.">Productos</a></li>
                                         <!-- <li><a href="services.html">Productos</a></li>
-                                        <li><a href="services.html">Productos</a></li> -->
+                                            <li><a href="services.html">Productos</a></li> -->
                                     </ul>
                                 </li>
                             </ul>
@@ -159,59 +161,38 @@
     <!-- CONTACT US -->
     <section>
         <div class="container">
-            <div class="row">
-                <!-- <div class="col-md-6 col-sm-6 animate fadeInLeft">
-                    <h3>Sales Queries</h3>
-                    <div class="row">
-                        <div class="col-md-4 col-sm-4">
-                            <img src="images/sales-quries-img.jpg" class="quries-img" alt="">
-                            <div class="height-20"></div>
-                        </div>
-                        <div class="col-md-8 col-sm-8">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac tortor at tellus feugiat congue quis ut nunc. Semper ac dolor Eaque ipsa quae.</p>
-                            <p>ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. luptas sit aspernatur.</p>
-                        </div>
-                    </div>
-                    <div class="height-20"></div>
-                    <h3>Follow Us</h3>
-                    <ul class="social">
-                        <li class="animate bounceIn"><a href="#." class="facebook"><i class="icon-facebook-1"></i></a></li>
-                        <li class="animate bounceIn" data-delay="100"><a href="#." class="twitter"><i class="icon-twitter-1"></i></a></li>
-                        <li class="animate bounceIn" data-delay="200"><a href="#." class="google-plus"><i class="icon-google"></i></a></li>
-                        <li class="animate bounceIn" data-delay="300"><a href="#." class="linkedin"><i class="icon-linkedin3"></i></a></li>
-                    </ul>
-                    <div class="height-50"></div>
-                </div> -->
+            <!-- <div class="row"> -->
 
-                <div class="form">
-                    <div class="col-md-6 col-sm-6 animate fadeInRight">
 
-                        <p class="success" id="success" style="display:none;"></p>
-                        <p class="error" id="error" style="display:none;"></p>
+            <div class="form">
+                <div class="col-md-12 col-sm-6 animate fadeInRight">
 
-                        <form class="contact-form" name="contact_form" id="contact_form" method="post" action="#" onSubmit="return false">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <input type="text" data-delay="300" placeholder="Nombre" name="contact_name" id="contact_name" class="input">
-                                </div>
-                                <div class="col-md-6">
-                                    <input type="text" data-delay="300" placeholder="Email" name="contact_email" id="contact_email" class="input">
-                                </div>
+                    <p class="success" id="success" style="display:none;"></p>
+                    <p class="error" id="error" style="display:none;"></p>
+
+                    <form class="contact-form" name="contact_form" id="contact_form" method="post" action="#" onSubmit="return false">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <input type="text" data-delay="300" placeholder="Nombre" name="contact_name" id="contact_name" class="input">
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <input type="text" data-delay="300" placeholder="Teléfono" name="contact_phone" id="contact_phone" class="input">
-                                </div>
+                            <div class="col-md-6">
+                                <input type="text" data-delay="300" placeholder="Email" name="contact_email" id="contact_email" class="input">
                             </div>
-                            <textarea data-delay="500" class="required valid" placeholder="Mensaje" name="message" id="message"></textarea>
-                            <button class="btn btn-primary" name="" type="submit" data-text="Contactanos" onClick="validateContact();">Contactanos</button>
-                        </form>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <input type="text" data-delay="300" placeholder="Teléfono" name="contact_phone" id="contact_phone" class="input">
+                            </div>
+                        </div>
+                        <textarea data-delay="500" class="required valid" placeholder="Mensaje" name="message" id="message"></textarea>
+                        <button class="btn btn-primary" name="" type="submit" data-text="Contactanos" onClick="validateContact();">Contactanos</button>
+                    </form>
 
 
-                    </div>
                 </div>
-
             </div>
+
+            <!-- </div> -->
         </div>
     </section>
     <!-- / COMPANY OVERVIEW -->
