--- a/contact-us.html
+++ b/contact-us.html
@@ -120,12 +120,13 @@
                                         <li><a href="productos.html#prod_siete">Maquinaria</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown-submenu"><a href="https://lockdowel.com/">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="#.">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <!-- <li><a href="services.html">Productos</a></li> -->
-                                        <li><a href="#.">Productos</a></li>
-                                        <!-- <li><a href="services.html">Productos</a></li>
-                                            <li><a href="services.html">Productos</a></li> -->
+                                        <li><a href="productos2.html#prod2_uno">SKU: E900BP</a></li>
+                                        <li><a href="productos2.html#prod2_dos">SKU: 8002-40-R5</a></li>
+                                        <li><a href="productos2.html#prod2_tres">SKU: E910BP</a></li>
+                                        <li><a href="productos2.html#prod2_cuatro">SKU: E1000-B</a></li>
+                                        <li><a href="productos2.html#prod2_cinco">SKU: E900BPMini</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -224,7 +225,7 @@
                 <div class="footer-left">
                     <div class="footer-address-widget clearfix">
                         <ul>
-                            <li><i class="icon-telephone114"></i>(55)5206 2240<a href="mailto:ingo@starkend.com">info@starkend.com</a></li>
+                            <li><i class="icon-telephone114"></i>(55)5206 2240<a href="mailto:info@starkend.com">info@starkend.com</a></li>
                             <li><i class="icon-icons74"></i>Viveros de Coyoacán 64<span>Tlalnepantla, Edo. de Méx, C.P. 54080</span></li>
                         </ul>
                     </div>
