--- a/productos.html
+++ b/productos.html
@@ -126,12 +126,13 @@
                                         <li><a href="#prod_siete" class="scroll link">Maquinaria</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown-submenu"><a href="https://lockdowel.com/">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="#.">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <!-- <li><a href="services.html">Productos</a></li> -->
-                                        <li><a href="#.">Productos</a></li>
-                                        <!-- <li><a href="services.html">Productos</a></li>
-                                        <li><a href="services.html">Productos</a></li> -->
+                                        <li><a href="productos2.html#prod2_uno">SKU: E900BP</a></li>
+                                        <li><a href="productos2.html#prod2_dos">SKU: 8002-40-R5</a></li>
+                                        <li><a href="productos2.html#prod2_tres">SKU: E910BP</a></li>
+                                        <li><a href="productos2.html#prod2_cuatro">SKU: E1000-B</a></li>
+                                        <li><a href="productos2.html#prod2_cinco">SKU: E900BPMini</a></li>
                                     </ul>
                                 </li>
                             </ul>
