--- a/productos2.html
+++ b/productos2.html
@@ -116,7 +116,7 @@
                         <li class="dropdown"><a href="#.">Marcas <i class="fa fa-caret-down"></i></a>
                             <ul class="dropdown-menu">
 
-                                <li class="dropdown-submenu"><a href="productos.html">OVVO <i class="fa fa-caret-right"></i></a>
+                                <li class="dropdown-submenu"><a href="#.">OVVO <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="productos.html#prod_uno">Perforación</a></li>
                                         <li><a href="productos.html#prod_dos">Anidado</a></li>
@@ -128,11 +128,12 @@
                                 </li>
                                 <li class="dropdown-submenu"><a href="#.">LOCKDOWEL <i class="fa fa-caret-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="productos2.html#prod2_uno">SKU: E900BP</a></li>
-                                        <li><a href="productos2.html#prod2_dos">SKU: 8002-40-R5</a></li>
-                                        <li><a href="productos2.html#prod2_tres">SKU: E910BP</a></li>
-                                        <li><a href="productos2.html#prod2_cuatro">SKU: E1000-B</a></li>
-                                        <li><a href="productos2.html#prod2_cinco">SKU: E900BPMini</a></li>
+                                        <li><a href="#prod2_uno" class="scroll link">SKU: E900BP</a></li>
+                                        <li><a href="#prod2_dos" class="scroll link">SKU: 8002-40-R5</a></li>
+                                        <li><a href="#prod2_tres" class="scroll link">SKU: E910BP</a></li>
+                                        <li><a href="#prod2_cuatro" class="scroll link">SKU: E1000-B</a></li>
+                                        <li><a href="#prod2_cinco" class="scroll link">SKU: E900BPMini</a></li>
+
                                     </ul>
                                 </li>
                             </ul>
@@ -150,118 +151,170 @@
     <!-- / HERDER -->
 
 
-
-
-
-
-
-    <!-- MAIN BANNER -->
-    <section class="cd-hero">
-        <ul class="cd-hero-slider autoplay">
-            <li class="selected">
-                <div class="cd-full-width">
-                    <div class="container">
-                        <h2>Nos interesan<br>tus opiniones<span class="color-default"></span></h2>
-                        <p>Ofrecemos distribución de producos en toda la republica</p>
-                        <a href="about-us.html" class="btn btn-primary" data-text="Leer más">Leer más</a>
-                        <a href="contact-us.html" class="btn btn-default" data-text="Contactanos">Contactanos</a>
-                    </div>
-                </div>
-            </li>
-
-            <li>
-                <div class="cd-full-width">
-                    <div class="container">
-                        <h2>Experiencia<span class="color-default"> amigable</span></h2>
-                        <p>Manejamos los productos de las marcas OVVO y LOCKDOWEL</p>
-                        <a href="contact-us.html" class="btn btn-default" data-text="contactanos">contactanos<i class="fas fa-badger-honey"></i></a>
-                    </div>
-                </div>
-            </li>
-
-            <li>
-                <div class="cd-full-width">
-                    <div class="container text-center">
-                        <h2 class="color-white">La experiencia es todo</h2>
-                        <p class="color-white">Con más de 15 años de experiencia, nos aseguraremos de que siempre obtenga lo mejor <br> y estamos con usted en cada paso del camino</p>
-                        <a href="about-us.html" class="btn btn-primary" data-text="leer más">leer más</a>
-                        <!-- <a href="contact-us.html" class="btn btn-default" data-text="Contact Us">Contact Us</a> -->
-                    </div>
-                </div>
-            </li>
-
-            <li>
-                <div class="cd-full-width">
-                    <div class="container text-right">
-                        <h2><span class="color-default">Nuestros<br></span>Clientes</h2>
-                        <p>Agradecemos su preferencia</p>
-                        <a href="productos.html" class="btn btn-primary" data-text="Productos">Productos</a>
-                    </div>
-                </div>
-            </li>
-
-        </ul>
-
-        <div class="cd-slider-nav">
-            <nav class="container">
-                <span class="cd-marker item-1"></span>
-
-                <ul>
-                    <li class="selected">
-                        <a href="#0">
-                            <div class="slide-number">1</div> Nos Interesan<span>Tus opiniones</span></a>
-                    </li>
-                    <li>
-                        <a href="#0">
-                            <div class="slide-number">2</div> Experiencia amigable<span>Productos OVVO y LOCKDOWEL</span></a>
-                    </li>
-                    <li>
-                        <a href="#0">
-                            <div class="slide-number">3</div> Nosotros<span>Tenemos 15 años de experiencia</span></a>
-                    </li>
-                    <li>
-                        <a href="#0">
-                            <div class="slide-number">4</div> Cliente<span>Exelente trato</span></a>
-                    </li>
+    <section class="subpage-header">
+        <div class="container ">
+            <div class="site-title clearfix">
+                <h2>Productos LOCKDOWEL</h2>
+                <ul class="breadcrumbs">
+                    <li><a href="index.html">Home</a></li>
+                    <li>Productos LOCKDOWEL</li>
                 </ul>
-            </nav>
+            </div>
+            <a href="contact-us.html" class="btn btn-primary get-in-touch" data-text="Contactanos"><i class="icon-telephone114"></i>Contactanos</a>
         </div>
-
     </section>
-    <!-- / MAIN BANNER -->
 
 
-
-
-    <!-- WELCOME -->
-    <section class="bg-blue">
+    <!-- PRODUCTO UNO -->
+    <section id="prod2_uno">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6 animate fadeInLeft">
-                    <h2>Bienvenido a Starkend</h2>
-                    <div class="height-10"></div>
-                    <p>Tenemos 15 años de experiencia en ditribución y manejo de productos relacionados con la construcción de stands muebles de exibición y mucho más. </p>
-                    <div class="height-10"></div>
-                    <p>te ofremos productos de la marca OVVO y LOCKDOWEL.</p>
-                    <div class="height-20"></div>
-                    <a href="about-us.html" class="btn btn-bordered-dark" data-text="leer más">leer más</a>
-                    <div class="height-40"></div>
-                </div>
-                <div class="col-md-6 animate fadeInRight">
-                    <div class="video-widget">
-                        <!-- <img src="images/video-thumb.jpg" class="img-shadow" alt="">
-                        <a href="http://vimeo.com/36031564" class="fancybox-media"><i class="fa fa-play"></i></a> -->
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ecDDHvLmrI0" allowfullscreen></iframe>
+            <article class="blog-item-classic">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 animate fadeInLeft">
+                        <div class="blog-thumbnail">
+                            <a href="#."><img alt="" src="images/productos2/producto_01.jpg"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 animate fadeInRight">
+                        <div class="blog-content">
+                            <div class="blog-date">2000 Plastic Barbed Channel Lock (2000 units/box, SKU: E900BP)</div>
+                            <h3><a href="#.">SKU: E900BP</a></h3>
+                            <!-- <p>• Pull Force: 120-160 lbs • Sheer Force: 100+ lbs • Removable: Yes • Material: Nylon • Refer to the catalog for additional routing and drilling information • 2000 units per box</p> -->
+                            <h6>- Pull Force: 120-160 lbs</h6>
+                            <h6>- Sheer Force: 100+ lbs</h6>
+                            <h6>- Removable: Yes</h6>
+                            <h6>- Material: Nylon</h6>
+                            <!-- <h6>- Refer to the catalog for additional routing and drilling information</h6> -->
+                            <h6>- 2000 units per box</h6>
+
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
+
         </div>
     </section>
-    <!-- / WELCOME -->
+    <!-- / PRODUCTO UNO -->
 
 
+    <!-- PRODUCTO DOS -->
+    <section id="prod2_dos">
+        <div class="container">
+            <article class="blog-item-classic">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 animate fadeInRight" data-delay="100">
+                        <div class="blog-content">
+                            <div class="blog-date">8mm Spring Pin (500 units/box, SKU: 8002-40-R5)</div>
+                            <h3><a href="#.">SKU: 8002-40-R5</a></h3>
+                            <h6>SKU: 8002-40-R5</h6>
+                            <h6>8 mm Diameter</h6>
+                            <h6>40 mm Length</h6>
+                            <h6>Use with wood thickness 5/8" or more</h6>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 animate fadeInLeft" data-delay="100">
+                        <div class="blog-thumbnail">
+                            <a href="#."><img alt="" src="images/productos2/producto_02.jpg"></a>
+                        </div>
+                    </div>
+
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- / PRODUCTO DOS -->
+
+
+    <!-- PRODUCTO TRES -->
+    <section id="prod2_tres">
+        <div class="container">
+            <article class="blog-item-classic">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 animate fadeInLeft" data-delay="200">
+                        <div class="blog-thumbnail">
+                            <a href="#."><img alt="" src="images/productos2/producto_03.jpg"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 animate fadeInRight" data-delay="200">
+                        <div class="blog-content">
+                            <div class="blog-date">Barbed H-Clip (500 units/box, SKU: E910BP)</div>
+                            <h3><a href="#.">SKU: E910BP</a></h3>
+                            <h6>- Drilling: Ø 8 mm and 32 mm spacing</h6>
+                            <h6>- Pull Force: 100+ lbs</h6>
+                            <h6>- Sheer Force: 100+ lbs with Spring Pin</h6>
+                            <!-- <h6>Used together with Spring Pin (PN: 8002-40-R5 or 8005)</h6> -->
+                            <h6>- Removable: No</h6>
+                            <h6>- Material: Nylon</h6>
+                            <!-- <h6>Refer to the catalog for additional routing and drilling information</h6> -->
+                            <h6>- 500 units per box</h6>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- / PRODUCTO TRES -->
+
+
+    <!-- PRODUCTO CUATRO -->
+    <section id="prod2_cuatro">
+        <div class="container">
+            <article class="blog-item-classic">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 animate fadeInRight" data-delay="200">
+                        <div class="blog-content">
+                            <div class="blog-date">LD T-Slot Router Bit (1 unit, SKU: E1000-B)</div>
+                            <h3><a href="#.">SKU: E1000-B</a></h3>
+                            <h6>Cutting Length: 11 mm</h6>
+                            <h6>Overall Length: 76.2 mm</h6>
+                            <h6>Shank Diameter: 9.525 mm (3/8″)</h6>
+                            <h6>Speed: 18000 RPM</h6>
+                            <h6>Plunge rate: 4000 mm/min (158 inches/min)</h6>
+
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 animate fadeInLeft" data-delay="200">
+                        <div class="blog-thumbnail">
+                            <a href="#."><img alt="" src="images/productos2/producto_04.jpg"></a>
+                        </div>
+                    </div>
+
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- / PRODUCTO CUATRO -->
+
+
+    <!-- PRODUCTO CINCO -->
+    <section id="prod2_cinco">
+        <div class="container">
+            <article class="blog-item-classic">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 animate fadeInLeft" data-delay="200">
+                        <div class="blog-thumbnail">
+                            <a href="#."><img alt="" src="images/productos2/producto_05.jpg"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 animate fadeInRight" data-delay="200">
+                        <div class="blog-content">
+                            <div class="blog-date">Mini Plastic Barbed Channel Lock (2000 units/box , SKU: E900BPMini)</div>
+                            <h3><a href="#.">SKU: E900BPMini</a></h3>
+                            <h6>Drilling: Ø 5 mm and 16 mm spacing</h6>
+                            <h6>Used for 1/2" material or more</h6>
+                            <h6>Must use E2000 T-Slot Router Bit to create routed slots.</h6>
+                            <h6>Pull Force: 70+ lbs</h6>
+                            <h6>Sheer Force: 50+ lbs</h6>
+                            <h6>Removable: Yes</h6>
+                            <h6>Material: Nylon</h6>
+                            <h6>500 units per box</h6>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- / PRODUCTO CINCO -->
 
 
     <div class="contact-us-bar">
@@ -282,18 +335,6 @@
     <footer id="footer">
         <div class="container">
             <div class="footer-top clearfix">
-
-                <!-- <div class="row">
-                    <div class="col-md-3 col-sm-3">
-                        <div class="footer-logo animate fadeInLeft">
-                            <a href="index.html"><img src="images/starkend_logo.png" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="col-md-9 col-sm-9">
-                        <p>Lorem ipsum dolor sit amet, consectetur adi pisi cing elit, sed do eiusmod tempor Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipis civelit sed quia non qui dolorem or phone +11 987 654 3210 ipsum
-                            quia dolor sit amet, consectetur.</p>
-                    </div>
-                </div> -->
 
                 <div class="height-50"></div>
 
